# znn-release

./: .gitignore
fft_3d_aocl/: Makefile
fft_3d_aocl/device/: fft1d.cl
fft_3d_aocl/host/inc/: fft_config.h
fft_3d_aocl/host/src/: main.cpp
fft_opencl/fft_1d/: CMakeLists.txt
fft_opencl/fft_1d/fft_1d/: CMakeLists.txt
fft_opencl/fft_1d/fft_1d/host/src/: main.cpp
src/cpp/: fft_test.cpp  hello_world_test.cpp  make_fft_test.sh  make_fft_test_cpu.sh  make_gcc-1.sh
src/include/cube/detail/: lockfree_cube_pool.hpp
src/include/fft/: fft_fpga.hpp  fft_fpga_transform.hpp  fftw.hpp
src/include/fpga/: OCLGlobalState.hpp  hello_world.hpp
